src/test/ui/rfc1623.stderr
error[E0308]: mismatched types
  --> $DIR/rfc1623.rs:24:8
   |
LL |     f: &id,
   |        ^^^ one type is more general than the other
   |
   = note: expected type `std::ops::FnOnce<(&'a Foo<'b>,)>`
              found type `std::ops::FnOnce<(&Foo<'_>,)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
